    ADDED: options: Panel > Buttons > Show Media/History/Bookmarks Button
    ADDED: options: Panel > General > Status/Totalsbar settings >
           Show Statusbar, Show Totalsbar, Show Size In Bytes,
           Show free disk space in the Totalsbar
    ADDED: option: Look&Feel > Quicksearch > "Up/Down cancels Quicksearch"
    ADDED: dbus interface: org.krusader.PanelManager.newTab(QString url) / newTabs(QStringList)
    ADDED: url command-line argument
    ADDED: action "Show View Options Menu"
    ADDED: detailed view context-menu option "Automatically Resize Columns"
    ADDED: action "cancel refresh" triggered by ESC by default
    ADDED: change icon size individually per view
    ADDED: thumbnails - toggleable by mainmenu > view > Show Previews
    ADDED: 128x128 pixel versions of the application icon, needed by Mac OS X
    ADDED: Konfigurator options: Look&Feel > Panel >
           Status/Totalsbar settings > Draw frame / Fill background
    ADDED: Konfigurator option: Colors > Colors > Other > Statusbar
    ADDED: Konfigurator option: Look&Feel > Panel > Panel layout >
           Quicksearch position / Tab Bar position
    ADDED: buttons "(un)mount" and "eject" in mountman gui
    ADDED: KMountMan::removable(), KMountMan::networkFilesystem()

  CHANGED: reorganize Konfigurator: "Look & Feel" page becomes "Panel" /
           move several options to new places
  CHANGED: when open/refresh of a dir fails, don't annoy the user with a message box,
           but display the error embedded into the panel
  CHANGED: icon size, icons/previews on/off are set seperately per view type
  CHANGED: dim icons in unfocused panel (if dim colors is activated)
  CHANGED: mountman gui: retrieve icons from Solid
  CHANGED: mountman gui: change mount check interval from 3000 to 500 ms
  CHANGED: mountman gui: current selection persists refresh of mountlist,
           mountlist is focused after refresh