@@ -1,3 +1,4 @@
+    ADDED: option: Panel > General > Tabs > Show new/close tab buttons
     ADDED: options: Panel > Buttons > Show Media/History/Bookmarks Button
     ADDED: options: Panel > General > Status/Totalsbar settings >
            Show Statusbar, Show Totalsbar, Show Size In Bytes,
